<resources>
    <!-- Existing strings -->
    <string name="app_name">Activity Manager</string>
    <string name="add_activity">Add New Activity</string>
    <string name="title">Title</string>
    <string name="description">Deskripsi</string>
    <string name="date">Tanggal</string>
    <string name="time">Time</string>
    <string name="reminder_before">Reminder (menit sebelum)</string>
    <string name="save">Simpan</string>
    <string name="delete">Hapus</string>
    <string name="cancel">Batal</string>
    <string name="share">Share</string>
    <string name="required_field">Required</string>
    <string name="reminder_prefix">Remind me</string>
    <string name="minutes">minutes</string>
</resources>